syntax = "proto3";

package api;

option go_package = "upassed.account.v1;client";

message GroupDTO {
    string id = 1;
    string specialization_code = 2;
    string group_number = 3;
}

message StudentDTO {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string middle_name = 4;
    string educational_email = 5;
    string username = 6;
    GroupDTO group = 7;
}

message TeacherDTO {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string middle_name = 4;
    string report_email = 5;
    string username = 6;
}
